# agent-harness-template

./: AGENT-HARNESS-TEMPLATE-README.md  CLAUDE.md  create-project.sh  tasks.md
docs/: FEATURE-LIST-SCHEMA.md  SECURITY-MODEL.md  SESSION-MANAGEMENT.md  TWO-AGENT-PATTERN.md
examples/api-service/: README.md  app_spec.txt
examples/web-app-builder/: README.md  app_spec.txt
logs/: notification.json  stop.json
template/: .gitignore  GUARDRAILS.md  README.md  autonomous_agent.py  pyproject.toml  requirements.txt
template/prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md
template/scripts/: preflight.sh
template/utils/: security.py  test_security.py
