[project]
name = "autonomous-agent-template"
version = "1.0.0"
description = "A reusable template for building long-running autonomous agents using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "claude-code-sdk>=0.0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
autonomous-agent = "autonomous_agent:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "utils*"]
